--- a/ckanext/publicamundi/templates/snippets/dialogs/draw-bbox.html
+++ b/ckanext/publicamundi/templates/snippets/dialogs/draw-bbox.html
@@ -7,7 +7,7 @@
   >
     <div class="modal-header">
         <a class="close cancel" aria-hidden="true">×</a>
-        <h3 id="{{ id }}-label">Draw a Bounding Box</h3>
+        <h3 id="{{ id }}-label">{{ _('Draw a Bounding Box') }}</h3>
     </div>
     <div class="modal-body">
         <div id="{{ id }}-map-container" class="map-container">A placeholder for the map widget</div>
