--- a/ckanext/publicamundi/templates/macros/ext_form.html
+++ b/ckanext/publicamundi/templates/macros/ext_form.html
@@ -1,4 +1,4 @@
-{% import "macros/form.html" as ckan_form %}
+{% import "macros/form.html" as _form %}
 
 {#
 Creates all the markup required for an custom key/value input. 
@@ -34,8 +34,8 @@ Example:
   {%- set extra_html = caller() if caller -%}
   {%- do classes.append('control-custom') -%}
 
-  {% call ckan_form.input_block(label_id, label or name, error, classes, control_classes=["editor"], extra_html=extra_html) %}
-    <div class="input-prepend" {{ ckan_form.attributes(attrs) }}>
+  {% call _form.input_block(label_id, label or name, error, classes, control_classes=["editor"], extra_html=extra_html) %}
+    <div class="input-prepend" {{ attrs|xmlattr }}>
       <label for="{{ label_id }}" class="add-on">Key</label>
       <input id="{{ id or names[0] }}-key" type="text" name="{{ names[0] }}" value="{{ values[0] | empty_and_escape }}" placeholder="{{ placeholders[0] }}" />
       <label for="{{ id or names[1] }}-value" class="add-on">Value</label>
