--- a/ckanext/publicamundi/themes/geodata/templates/snippets/package_item_home.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/package_item_home.html
@@ -10,7 +10,7 @@ truncate_title - The length to truncate the title to (default: 80).
 
 Example:
 
-  {% snippet 'snippets/package_item.html', package=c.datasets[0] %}
+  {% snippet 'snippets/package_item_home.html', package=c.datasets[0] %}
 
 #}
 {% set truncate = truncate or 180 %}
