--- a/ckanext/publicamundi/themes/geodata/templates/snippets/package_list_home.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/package_list_home.html
@@ -11,7 +11,7 @@ truncate_title - The length to truncate the title to (default: 80).
 
 Example:
 
-  {% snippet 'snippets/package_list.html', packages=c.datasets %}
+  {% snippet 'snippets/package_list_home.html', packages=c.datasets %}
 
 #}
 {% if packages %}
