--- a/ckanext/publicamundi/themes/geodata/templates/snippets/package_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/package_list.html
@@ -17,7 +17,7 @@ Example:
 {% if packages %}
   <ul class="dataset-list unstyled">
     {% for package in packages %}
-      {% snippet 'snippets/package_item_home.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title %}
+      {% snippet 'snippets/package_item.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title %}
     {% endfor %}
   </ul>
 {% endif %}
