--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 {% block page %}
 
-<div class="account-masthead" style="background-color:#F3F4F4">
+<div class="account-masthead" style="background-color:#F3F4F4; ">
     <div class="container">
     
         <div class="mainmenu">
@@ -65,7 +65,7 @@
 </div>
 </div>
 </div>
-<header class="account-masthead">
+<header class="account-masthead" style="height:54px" >
     <div class="container">
         {% block header_site_navigation %}
         <div id="homemenu">
