--- a/ckanext/publicamundi/themes/geodata/templates/group/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/group/index.html
@@ -2,9 +2,20 @@
 
 {% block subtitle %}{{ _('Groups') }}{% endblock %}
 
-{% block breadcrumb_content %}
-  <li class="active">{% link_for _('Groups'), controller='group', action='index' %}</li>
+{% block breadcrumb %}
+ {% if h.check_access('group_create') %}
+    {% link_for _('Add Group'), controller='group', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+    {% endif %} 
+
+    <ol class="breadcrumb">
+    {% block breadcrumb_content %}
+        <li class="active">{% link_for _('Groups'), controller='group', action='index' %}</li>
+  {% endblock %}
+  </ol>
+
 {% endblock %}
+ 
+
 
 {% block page_header %}{% endblock %}
 
@@ -17,12 +28,13 @@
 </div>
   {% endblock %}
 
-{% block page_primary_action %}
+  {% block page_primary_action %}{% endblock %}
+  {# {% block page_primary_action %}
   {% if h.check_access('group_create') %}
     {% link_for _('Add Group'), controller='group', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
   {% endif %}
 {% endblock %}
-
+#}
 {% block primary_content_inner %}
   <h1 class="hide-heading">{{ _('Groups') }}</h1>
     {% block groups_list %}
