--- a/ckanext/publicamundi/themes/geodata/templates/organization/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/index.html
@@ -1,10 +1,20 @@
 {% extends "page.html" %}
 
 {% block subtitle %}{{ _('Organizations') }}{% endblock %}
+{% block breadcrumb %}
+  {% if h.check_access('organization_create') %}
+    {% link_for _('Add Organization'), controller='organization', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+  {% endif %}
 
-{% block breadcrumb_content %}
-  <li class="active">{% link_for _('Organizations'), controller='organization', action='index' %}</li>
+    <ol class="breadcrumb">
+    {% block breadcrumb_content %}
+    <li class="active">{% link_for _('Organizations'), controller='organization', action='index' %}</li>
+  {% endblock %}
+  </ol>
+
 {% endblock %}
+ 
+
 
 {% block page_header %}{% endblock %}
 
@@ -15,11 +25,6 @@
 </div>
   {% endblock %}
 
-{% endblock %}
-{% block page_primary_action %}
-  {% if h.check_access('organization_create') %}
-    {% link_for _('Add Organization'), controller='organization', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
-  {% endif %}
 {% endblock %}
 {% block primary_content_inner %}
   <h1 class="hide-heading">{% block page_heading %}{{ _('Organizations') }}{% endblock %}</h1>
