Fixed templated for right redirecting

--- a/ckanext/publicamundi/templates/user/dashboard.html
+++ b/ckanext/publicamundi/templates/user/dashboard.html
@@ -11,7 +11,7 @@
           {{ h.build_nav_icon('user_dashboard_datasets', _('My Datasets')) }}
           {{ h.build_nav_icon('user_dashboard_organizations', _('My Organizations')) }}
           {{ h.build_nav_icon('user_dashboard_groups', _('My Groups')) }}
-          {{ h.build_nav_icon('user_dashboard_resources', _('Resources')) }}
+          {{ h.build_nav_icon('user_dashboard_resources', _('Resources'), icon='cogs') }}
         </ul>
       </header>
     {% endblock %}
