--- a/ckanext/publicamundi/templates/user/read_base.html
+++ b/ckanext/publicamundi/templates/user/read_base.html
@@ -2,5 +2,5 @@
 
 {% block content_primary_nav %}
   {{super()}}
-  {{ h.build_nav_icon('admin_page_resources', _('Resources')) }}
+  {{ h.build_nav_icon('admin_page_resources', _('Resources'), icon='cogs') }}
 {% endblock %}
