--- a/ckanext/publicamundi/templates/user/snippets/package_item.html
+++ b/ckanext/publicamundi/templates/user/snippets/package_item.html
@@ -46,7 +46,7 @@ Example:
 	  {% set task_result=h.identify_resource(resource.id) %}
 	  
           {% if task_result.found %} 
-	      {% snippet 'user/snippets/publicamundi_resource_item.html', pkg=package, res=resource ,task_result=task_result%}
+	      {% snippet 'user/snippets/publicamundi_resource_item.html', pkg=package, res=resource ,task_result=task_result, parent=parent%}
           {% else %}
 	      {% snippet 'user/snippets/resource_item.html', pkg=package, res=resource ,task_result=task_result%}
 	  {% endif %}
