--- a/ckanext/publicamundi/templates/user/snippets/package_list.html
+++ b/ckanext/publicamundi/templates/user/snippets/package_list.html
@@ -18,7 +18,7 @@ Example:
   <ul class="dataset-list unstyled">
     {% for package in packages %}
 
-      {% snippet 'user/snippets/package_item.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title %}
+      {% snippet 'user/snippets/package_item.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title, parent=parent %}
     {% endfor %}
   </ul>
 {% endif %}
