--- a/ckanext/publicamundi/templates/user/snippets/publicamundi_resource_item.html
+++ b/ckanext/publicamundi/templates/user/snippets/publicamundi_resource_item.html
@@ -10,7 +10,7 @@
     
       <div class="dashboard-resource-info">
 	  {% if task_result.status == "Identified" %}
-	      {% snippet 'user/snippets/identified.html', pkg=pkg, res=res ,task_result=task_result%}
+	      {% snippet 'user/snippets/identified.html', pkg=pkg, res=res ,task_result=task_result, parent= parent%}
 	    
 	  
 	  {% elif task_result.status == "Published" %}
@@ -19,7 +19,7 @@
 
 	  {% elif task_result.status == "Rejected" %}
 	      
-	      {% snippet 'user/snippets/rejected.html', pkg=pkg, res=res ,task_result=task_result %}
+	      {% snippet 'user/snippets/rejected.html', pkg=pkg, res=res ,task_result=task_result,parent= parent %}
 	  
 	  {% elif task_result.status == "Not Ready" %}
 	      
