--- a/ckanext/publicamundi/templates/user/snippets/rejected.html
+++ b/ckanext/publicamundi/templates/user/snippets/rejected.html
@@ -1,12 +1,11 @@
 {% if task_result.resource_type=="vector" %}
 
-    {% set inject_template_url = h.url_for('vector_inject',resource_id=res.id) %}
-    {% set reidentify_url = h.url_for('identify_vector_resource',resource_id=res.id) %}
+    
+    {% set reidentify_url = h.url_for('identify_vector_resource',resource_id=res.id, parent = parent) %}
  
 {% elif task_result.resource_type=="raster" %}
     
-    {#{% set inject_template_url = h.url_for(controller='ckanext.vectorstorer.controllers.vector:VectorController', action='inject') %}
-    #}
+     
     {% set reidentify_url = h.url_for('identify_raster_resource',resource_id=res.id) %}
 
 {% endif %}
