--- a/ckanext/publicamundi/themes/geodata/templates/header.html
+++ b/ckanext/publicamundi/themes/geodata/templates/header.html
@@ -25,6 +25,13 @@
 
         </div>
         <div class="mainmenu">
+
+        <div id="menu-block" >
+        {% block groups_list %}
+             {% snippet "snippets/menu_list.html", items=h.list_menu_items() %} 
+        {% endblock %}
+    </div>
+
         <nav class="section navigation">
           <ul class="nav nav-pills">
             {% block header_site_navigation_tabs %}
