--- a/ckanext/publicamundi/themes/geodata/templates/package/search.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/search.html
@@ -22,6 +22,11 @@
 
 {% endblock %}
 
+{% block secondary_content %}
+<div class="paintme">
+  {{ super() }}
+</div>
+{% endblock %}
 
 {% block searchbar %}
 
