--- a/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
@@ -16,14 +16,13 @@ Example:
 
 {% with truncate=truncate or 0, url=h.url_for(controller='organization', action='read', id=organization.name) %}
   <div class="module module-narrow module-shallow context-info">
-    {% if has_context_title %}
       <h2 class="module-heading"><i class="icon-building"></i> {{ _('Organization') }}</h2>
-    {% endif %}
     <section class="module-content">
+    {% if organization %}
     {% block image %}
         <div class="image">
           <a href="{{ url }}">
-            <img src="{{ organization.image_display_url or h.url_for_static('/base/images/placeholder-organization.png') }}" width="200" alt="{{ organization.name }}" />
+            <img src="{{ organization.image_url or h.url_for_static('/base/images/placeholder-organization.png') }}" width="200" alt="{{ organization.name }}" />
           </a>
         </div>
 
@@ -52,7 +51,8 @@ Example:
           {{ h.follow_button('group', organization.id) }}
         </div>
       {% endif %}
-        #}
+      #}
+      {% endif %}
     </section>
   </div>
 {% endwith %}
