--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form.html
@@ -22,7 +22,7 @@
     {% if fields -%}
       <span>{{ form.hidden_from_list(fields=fields) }}</span>
     {%- endif %}
-  {% endblock %}
+    {% endblock %}
   {% block search_sortby %}
   {% if sorting %}
       <div class="form-select control-group control-order-by">
@@ -42,10 +42,9 @@
   {% block search_title %}
   <div class="form-title"> <h3> {{ _('Search Filters') }}</h3> </div>
   {% if not no_title %}
-  <div class="form-title middle"> <h3>{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</h3></div>
+  <div class="form-title middle-text"> <h3>{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</h3></div>
     {% endif %}
   {% endblock %}
-
   {% block search_facets %}
     {% if facets %}
       <p class="filter-list">
