--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
@@ -45,7 +45,7 @@
   {% block search_title %}
   <div class="form-title"> <h3> {{ _('Search Filters') }}</h3> </div>
   {% if not no_title %}
-  <div class="form-title middle"> <h3>{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</h3></div>
+  <div class="form-title middle-text"> <h3>{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</h3></div>
     {% endif %}
   {% endblock %}
 
