--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -32,7 +32,7 @@
             {{ h.build_nav_main(
                 ('search', _('Datasets')),
                 ('organizations_index', _('Organizations')),
-                ('group_index', _('Groups')),
+                ('group_index', _('Topics')),
                 ('about', _('About'))
                 ) }}
 
