--- a/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
@@ -21,8 +21,8 @@ Example:
     {% if organization %}
     {% block image %}
         <div class="image">
-          <a href="{{ url }}">
-            <img src="{{ organization.image_url or h.url_for_static('/base/images/placeholder-organization.png') }}" width="200" alt="{{ organization.name }}" />
+            <a href="{{ url }}">
+            <img src="{{ organization.image_url or organization.image_display_url or h.url_for_static('/base/images/placeholder-organization.png')}}" width="200" alt="{{ organization.name }}" />
           </a>
         </div>
 
