--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form.html
@@ -40,9 +40,8 @@
   {% endblock %}
 
   {% block search_title %}
-  <div class="form-title"> <h3> {{ _('Search Filters') }}</h3> </div>
   {% if not no_title %}
-  <div class="form-title middle-text"> <h3>{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</h3></div>
+  <div class="form-title middle-text">{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</div>
     {% endif %}
   {% endblock %}
   {% block search_facets %}
