--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -88,6 +88,11 @@ input[type="tel"] {
     border-radius: 1px;
 }
 
+.alert.error-messages > h3 {
+    font-size: 1.06em;
+    margin: 4px 0px;
+}
+
 label.checkbox {
     font-weight: inherit;
     margin-top: 4px;
@@ -265,7 +270,10 @@ span.space-x3 { padding: 0px 12px }
 .control-upload .controls {
   position:relative;
   width: 100%;
-  margin: 5px 0px 10px 0px;
+}
+
+.form-horizontal .control-upload .controls {
+  /*margin: inherit;*/
 }
 
 .control-upload .controls.choose-method input[type='file'] {
@@ -315,8 +323,9 @@ span.space-x3 { padding: 0px 12px }
 
 .control-upload .controls.upload-file span.selected-file {
    padding: 0px 5px;
-   font-size: 0.95em;
-   font-family: monospace;
+   font-size: 0.92em;
+   vertical-align: text-top;
+   /*font-family: monospace;*/
 }
 
 /*
@@ -335,3 +344,10 @@ span.space-x3 { padding: 0px 12px }
     overflow: auto;
 }
 
+/*
+ * Dataset views
+ */
+
+section.additional-info header > .btn-group {
+    margin-top: 8px;
+}
