--- a/ckanext/publicamundi/templates/package/search.html
+++ b/ckanext/publicamundi/templates/package/search.html
@@ -3,7 +3,7 @@
 {% block page_primary_action %}
 
 {% if h.check_access('package_create') %}
-{% with edit_url = h.url_for('/dataset/new'), import_url = h.url_for('/dataset/import') %}
+{% with edit_url = h.url_for('/dataset/new'), import_url = h.url_for('/dataset/import_metadata') %}
 <div class="page_primary_action">
     <div class="btn-group">
         <a class="btn btn-primary" href="{{ edit_url }}"
