--- a/ckanext/publicamundi/templates/package/snippets/additional_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/additional_info.html
@@ -1,6 +1,6 @@
 <section class="additional-info">
 
-  <h3>{{ _('Basic Metadata') }}</h3>
+  <header><h3 class="inline">{{ _('Basic Metadata') }}</h3></header>
   <table class="table table-bordered">
     <colgroup>
         <col width="22.1%"></col>
@@ -71,12 +71,33 @@
   {%- set obj = pkg_dict.get(dt) -%}
   
   {%- if obj -%}
-  <h3>{{ '%s Metadata'|format(h.dataset_types().get(dt).get('title'))|title }}</h3> 
+  <header>
+    <h3 class="inline">{{ '%s Metadata'|format(h.dataset_types().get(dt).get('title'))|title }}</h3>
+    
+    {% with api_controller = 'ckanext.publicamundi.controllers.api:Controller' %}
+    <div class="btn-group pull-right">
+      <a class="btn" 
+        href="{{ h.url_for(controller=api_controller, action='dataset_export', name_or_id=pkg_dict.name) }}"
+        >{{ _('Download as') }}</a>
+      <button class="btn dropdown-toggle" data-toggle="dropdown">
+      <span class="caret"></span>
+      </button>
+        <ul class="dropdown-menu">
+          <li>
+            <a class="" 
+              href="{{ h.url_for(controller=api_controller, action='dataset_export', name_or_id=pkg_dict.name) }}"
+              >{{ _('XML Metadata') }}</a></li>
+          <li>
+            <a class="" 
+              href="{{ h.url_for('/api/action/dataset_show', id=pkg_dict.name) }}"
+              >{{ _('JSON Metadata') }}</a></li>
+        </ul>
+    </div>
+    {% endwith %} {# api_controller #}
+
+  </header>
   {{ 
-     h.markup_for('read:table', obj, 
-        errors={}, 
-        name_prefix='', 
-        data={ 'max_depth': 2 },) 
+    h.markup_for('read:table', obj, errors={}, name_prefix='', data={ 'max_depth': 2 }) 
   }}
   {%- endif -%} {# if obj #}
 
