--- a/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
@@ -5,7 +5,10 @@
 
 {% block package_basic_fields_dataset_type %}
 
-{% snippet 'package/snippets/edit-dataset_type.html', data=data, is_new=is_new, is_draft=is_draft %}
+{% snippet 'package/snippets/edit-dataset_type.html', 
+    data=data, is_new=is_new, is_draft=is_draft,
+    description=_('Specify the metadata schema the dataset aligns to.')
+%}
 
 {% endblock %} {# package_basic_fields_dataset_type #}
 
@@ -64,8 +67,11 @@
 
 {% block package_basic_fields_tags %}
 
-{% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
-
+{% with tag_attrs = {
+    'data-module': 'autocomplete', 
+    'data-module-tags': '', 
+    'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} 
+%}
 {{ 
     form.input('tag_string', 
         id = 'field-tags', 
@@ -76,6 +82,7 @@
         classes = ['control-full'], 
         attrs = tag_attrs) 
 }}
+{% endwith %}
 
 {% endblock %}
 
@@ -109,26 +116,13 @@
 <input type="hidden" name="groups__0__id" value="{{ data.group_id }}" />
 {% endif %}
 
-{% set existing_org = data.owner_org or data.group_id %}
 {% if h.check_access('sysadmin') or is_new or is_draft %}
-{% set orgs_available = h.organizations_available('create_dataset') %}
-{% set orgs_available_objs = h.organization_dict_objects(orgs_available) %}
-{% if orgs_available %}
-<div class="control-group">
-    <label for="field-organizations" class="control-label">{{ _('Organization') }}</label>
-    <div class="controls">
-        <select id="field-organizations" name="owner_org" data-module="autocomplete" class="input-xlarge">
-            <option value="" {% if not selected_org and data.id %} selected="selected" {% endif %}>{{ _('Select an organization...') }}</option>
-            {% for org in orgs_available %}
-            {# Select the 1st org from users list only if there is not an existing org #}
-            {% set selected_org = (existing_org and existing_org == org.id) or (not existing_org and not data.id and org.id == orgs_available[0].id) %}
-            {% set org_obj = orgs_available_objs.get(org.name) %}
-                <option value="{{ org.id }}" {% if selected_org %} selected="selected" {% endif %}>{{ org_obj.get('display_name') }}</option>
-            {% endfor %}
-        </select>
-    </div>
-</div>
-{% endif %}
+{% snippet 'package/snippets/edit-organization.html', 
+    name = 'owner_org', 
+    value = data.owner_org,
+    required = false,
+    orgs_available = h.organizations_available('create_dataset')
+%}
 {% endif %}
 
 {% endblock %}
