--- a/ckanext/publicamundi/templates/snippets/dialogs/import-metadata.html
+++ b/ckanext/publicamundi/templates/snippets/dialogs/import-metadata.html
@@ -18,7 +18,9 @@
         <div class="import-step">
             <p>Create a new dataset by importing an existing <strong>XML</strong> metadata file.</p>
             <p>You can either upload a local file from your computer, or use a link (in case metadata is allready published somewhere).</p>
-            {% with action = h.url_for('publicamundi-files-upload-file', object_type='source-metadata') %} 
+            {% with action = h.url_for(
+                controller='ckanext.publicamundi.controllers.files:Controller', action='upload_file', object_type='source-metadata') 
+            %} 
             <form id="{{ id }}-form" action="{{ action }}" method="post" enctype="multipart/form-data">
                 {%- block form %}
                 
@@ -28,7 +30,6 @@
                     allowed_mime_types = ['text/xml', 'application/xml'],
                     labels = { 'proceed': _('Import'), },
                     icons = { 'proceed': 'icon-circle-arrow-right', },
-                    button_classes = []
                 %}
                 
                 {% endblock -%}
