--- a/ckanext/publicamundi/templates/snippets/upload-ajax.html
+++ b/ckanext/publicamundi/templates/snippets/upload-ajax.html
@@ -2,14 +2,14 @@
 
 {% block controls_link_file %}
 {{ super() }}
-<button class="btn {{ button_classes|join(' ') }} btn-primary proceed" title="">
+<button class="btn {{ classes.buttons|join(' ') }} btn-primary proceed" title="">
     <i class="{{ icons.proceed|default('icon-arrow-right') }}"></i> {{ labels.proceed|default(_('Proceed')) -}}
 </button>
 {% endblock %}
 
 {% block controls_upload_file %}
 {{ super() }}
-<button class="btn {{ button_classes|join(' ') }} btn-primary proceed" title="">
+<button class="btn {{ classes.buttons|join(' ') }} btn-primary proceed" title="">
     <i class="{{ icons.proceed|default('icon-arrow-right') }}"></i> {{ labels.proceed|default(_('Proceed')) -}}
 </button>
 {% endblock %}
