Update resource_identify model,helper and user dashboard templates

--- a/ckanext/publicamundi/templates/user/snippets/identified.html
+++ b/ckanext/publicamundi/templates/user/snippets/identified.html
@@ -17,7 +17,7 @@
 	
       <a  href="{{ inject_render_url }}" data-module="inject-dialog" data-module-template="{{ inject_render_url }}" data-loading-text="{{ loading_text }}">
 	  <i class="icon-inject"></i> 
-	    {{ _('Data API') }}
+	    {{ _('Inject') }}
 	  </a>
       </li>
       
