Changes on how the tasks handling the resources.Updated vector templates

--- a/ckanext/publicamundi/storers/vector/templates/export/export.html
+++ b/ckanext/publicamundi/storers/vector/templates/export/export.html
@@ -14,7 +14,7 @@
 		{'display_name': 'AutoCAD DXF', 'get_param': 'dxf'},		
 		{'display_name': 'Geospatial PDF', 'get_param': 'pdf'},
 		{'display_name': 'SpatiaLite', 'get_param': 'sqlite'},
-		{'display_name': 'MS Excel format', 'get_param': 'xls'},
+		{'display_name': 'MS Excel format', 'get_param': 'xlsx'},
 		{'display_name': 'GeoPackage', 'get_param': 'gpkg'}
 		] %}
     {% set gml_formats=[
