--- a/ckanext/publicamundi/storers/vector/templates/user/snippets/inject_templates/vector/shapefile.html
+++ b/ckanext/publicamundi/storers/vector/templates/user/snippets/inject_templates/vector/shapefile.html
@@ -4,22 +4,29 @@
     GDAL Driver : {{task_result.gdal_driver}}</br>
     Layer Name : {{layer.layer_name}}</br>
     Layer Geometry : {{layer.layer_geometry}}</br>
-    Layer Srs : {{layer.layer_srs}}</br>
+    {% if layer.layer_srs==-1 %}
+      Layer Srs : {{ _('SRS not found')}}</br>
+    {% else %}
+      Layer Srs : {{layer.layer_srs}}</br>
+    {% endif %}
 </div>
 </br>
 <div>
-    <label>{{ _('Insert Encoding')}}</label> 
-    <input  id="shp_encoding" type="text">
-    
-  
+
+   <input type="checkbox" id="checkbox_{{layer.idx}}"  name="checkbox_layer" style="display: none;" checked>
     <div id="divproj" class="form-select ">
-		
-		<label>{{ _('Select projection')}}</label> <input  id="projection" type="text">
+	<label>{{ _('Enter projection')}}</label> 
+	{% if layer.layer_srs==-1 %}
+	 <input  id="layer_srs_{{layer.idx}}" type="text" name="srs_input">
+	{% else %}
+	 <input  id="layer_srs_{{layer.idx}}" type="text" name="srs_input" value="{{layer.layer_srs}}">
+	{% endif %}
+	
 	      
-	</div>
+    </div>
 
 	
-	<div id="proj-error" class="projection-error"></div>
+    <div id="proj-error" class="projection-error"></div>
 
 
 </div>
