--- a/ckanext/publicamundi/templates/user/snippets/ingest_templates/ingest_base.html
+++ b/ckanext/publicamundi/templates/user/snippets/ingest_templates/ingest_base.html
@@ -3,12 +3,12 @@
 
   <div class="modal-header">
     <h3>
-      {{ _('Inject Form') }}
+      {{ _('Ingest Form') }}
     </h3>
   </div>
   <div{% if not embedded %} class="modal-body"{% endif %}>
    <body>
-    {% block inject_content %}{% endblock %}
+    {% block ingest_content %}{% endblock %}
   </body>
 
   </div>
