--- a/ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html
@@ -8,7 +8,7 @@ Example:
     {% snippet "group/snippets/group_list.html" %}
 
 #}
-<ul class="menu-grid" data-module="media-grid">
+<ul class="icons-grid" >
   {% for item in items %}
     {% snippet "snippets/menu_item.html", item=item, position=loop.index %}
   {% endfor %}
