--- a/ckanext/publicamundi/themes/geodata/templates/group/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/group/index.html
@@ -2,23 +2,20 @@
 
 {% block subtitle %}{{ _('Groups') }}{% endblock %}
 
-{% block breadcrumb %}
- {% if h.check_access('group_create') %}
+{% block breadcrumb_content %}
+  <li class="active">{% link_for _('Groups'), controller='group', action='index' %}</li>
+{% endblock %}
+
+{% block page_primary_action %} 
+{% if h.check_access('group_create') %}
     {% link_for _('Add Group'), controller='group', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
     {% endif %} 
-
-    <ol class="breadcrumb">
-    {% block breadcrumb_content %}
-        <li class="active">{% link_for _('Groups'), controller='group', action='index' %}</li>
-  {% endblock %}
-  </ol>
-
 {% endblock %}
+
  
 
 
 {% block page_header %}{% endblock %}
-
 {% block searchbar %}
 <div class="searchbar">
     {% block groups_search_form %}
@@ -28,7 +25,6 @@
 </div>
   {% endblock %}
 
-  {% block page_primary_action %}{% endblock %}
   {# {% block page_primary_action %}
   {% if h.check_access('group_create') %}
     {% link_for _('Add Group'), controller='group', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
