--- a/ckanext/publicamundi/themes/geodata/templates/header.html
+++ b/ckanext/publicamundi/themes/geodata/templates/header.html
@@ -26,12 +26,7 @@
         </div>
         <div class="mainmenu">
 
-        <div id="menu-block" >
-        {% block groups_list %}
-             {% snippet "snippets/menu_list.html", items=h.list_menu_items() %} 
-        {% endblock %}
-    </div>
-
+        
         <nav class="section navigation">
           <ul class="nav nav-pills">
             {% block header_site_navigation_tabs %}
@@ -42,6 +37,16 @@
                 ('maps', _('Maps')),
                 ('about', _('About'))
                 ) }}
+
+    {% block menucontainer %}
+    
+            <div id="menu-block"  >
+        {% block groups_list %}
+             {% snippet "snippets/menu_list.html", items=h.list_menu_items() %} 
+        {% endblock %}
+        </div>
+        {% endblock %}
+
             </div>
             {% endblock %}
           </ul>
@@ -54,7 +59,7 @@
         {% block header_account_container_content %}
       {% if c.userobj %}
           <div class="account avatar authed" data-module="me" data-me="{{ c.userobj.id }}">
-              <ul class="menu">
+              <ul class="user-menu">
               {% block header_account_logged %}
                            <li>
                 <a href="{{ h.url_for(controller='user', action='read', id=c.userobj.name) }}" class="viewprofile" title="{{ _('View profile') }}">
@@ -72,7 +77,7 @@
               <li class="notifications {% if new_activities > 0 %}notifications-important{% endif %}">
                 {% set notifications_tooltip = ngettext('Dashboard (%(num)d new item)', 'Dashboard (%(num)d new items)', new_activities) %}
                 <a href="{{ h.url_for(controller='user', action='dashboard') }}" title="{{ notifications_tooltip }}">
-                  <span>{{ new_activities }}{{ _(' Activities')}}</span>
+                    <span>{{ _('Dashboard') }}</span>
                 </a>
               </li>
               {% block header_account_settings_link %}
@@ -116,4 +121,8 @@
     {% endif %}
     {% endblock %}
     #}
-{% endblock %}
+
+  
+    {% endblock %}
+
+
