--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -8,24 +8,26 @@
 {% block header_account_container_content %}
       {% if c.userobj %}
           <div class="account avatar authed" data-module="me" data-me="{{ c.userobj.id }}">
-              <ul class="menu">
+              <ul class="user-menu">
               {% block header_account_logged %}
-              {% if c.userobj.sysadmin %}
-                <li>
-                  <a href="{{ h.url_for(controller='admin', action='index') }}" title="{{ _('Sysadmin settings') }}">
-                  </a>
-                </li>
-              {% endif %}
               <li>
                 <a href="{{ h.url_for(controller='user', action='read', id=c.userobj.name) }}" class="viewprofile" title="{{ _('View profile') }}">
                   <span class="username">{{ c.userobj.display_name }}</span>
                 </a>
                 <ul>
-              {% set new_activities = h.new_activities() %}
+            {% if c.userobj.sysadmin %}
+                <li>
+                  <a href="{{ h.url_for(controller='admin', action='index') }}" title="{{ _('Sysadmin settings') }}">
+                  </a>
+                </li>
+              {% endif %}
+        
+            {% set new_activities = h.new_activities() %}
+            {% set notifications_tooltip = ngettext('Dashboard (%(num)d new item)', 'Dashboard (%(num)d new items)', new_activities) %}
               <li class="notifications {% if new_activities > 0 %}notifications-important{% endif %}">
-                {% set notifications_tooltip = ngettext('Dashboard (%(num)d new item)', 'Dashboard (%(num)d new items)', new_activities) %}
                 <a href="{{ h.url_for(controller='user', action='dashboard') }}" title="{{ notifications_tooltip }}">
-                  <span>{{ new_activities }}{{ _(' Activities')}}</span>
+                    {#  <span>{{ new_activities }}{{ _(' Activities')}}</span> #}
+                    <span>{{ _('Dashboard') }}</span>
                 </a>
               </li>
               {% block header_account_settings_link %}
@@ -84,12 +86,7 @@
     </hgroup>
 </div>
 
-    <div id="menu-block-home" >
-        {% block groups_list %}
-             {% snippet "snippets/menu_list.html", items=h.list_menu_items() %} 
-        {% endblock %}
-    </div>
-        <nav class="section navigation">
+            <nav class="section navigation">
           <ul class="nav nav-pills">
             {% block header_site_navigation_tabs %}
               {{ h.build_nav_main(
@@ -105,7 +102,17 @@
           </ul>
           </nav>
           </header>
-      {% endblock %}
+       
+            {% block menucontainer %}
+          <div id="menu-block-home" >
+        {% block groups_list %}
+             {% snippet "snippets/menu_list.html", items=h.list_menu_items() %} 
+        {% endblock %}
+    </div>
+
+    {% endblock %}
+
+          {% endblock %}
 
 {% set homepage_style = ( g.homepage_style or '1' ) %}
 
