--- a/ckanext/publicamundi/themes/geodata/templates/organization/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/index.html
@@ -1,19 +1,19 @@
 {% extends "page.html" %}
 
 {% block subtitle %}{{ _('Organizations') }}{% endblock %}
-{% block breadcrumb %}
-  {% if h.check_access('organization_create') %}
+
+{% block breadcrumb_content %}
+    <li class="active">{% link_for _('Organizations'), controller='organization', action='index' %}</li>
+{% endblock %}
+
+{% block page_primary_action %} 
+{% if h.check_access('organization_create') %}
     {% link_for _('Add Organization'), controller='organization', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
   {% endif %}
 
-    <ol class="breadcrumb">
-    {% block breadcrumb_content %}
-    <li class="active">{% link_for _('Organizations'), controller='organization', action='index' %}</li>
-  {% endblock %}
-  </ol>
-
 {% endblock %}
- 
+
+
 
 
 {% block page_header %}{% endblock %}
